--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ description: On this webpage you will find all of Assignments by Group 9!
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
-baseurl: ""
+baseurl: "data_group_9"
 
