--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #title: ""
-description: On this webpage you will find all of Assignments by Group 9!
+description: On this webpage you will find all of the Assignments by Group 9!
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
